syntax = "proto3";

package file_transfer;

message FileQuery {
    uint32 version = 1;
    string filename = 2;
}

message FileResponse {
    message FileMetadata {
        enum Status {
            FOUND = 0;
            NOT_FOUND = 1;
        }
        Status status = 1;
        uint64 file_size = 2;
    }

    message ErrorDetails {
        enum Kind {
            INVALID_QUERY = 0;
            UNSUPPORTED_VERSION = 1;
        }
        Kind kind = 1;
        string message = 2;
    }

    oneof response {
        FileMetadata metadata = 1;
        ErrorDetails error = 2;
    }
}

message TransferAck {
    enum AckStatus {
        ACCEPTED = 0;
        REJECTED = 1;
    }
    AckStatus status = 1;
}

message FileChunk {
    uint32 index = 1;
    bytes data = 2;
}
